fix: center horseshoe icon vertically with align-self: center

--- a/static/css/comment-custom.css
+++ b/static/css/comment-custom.css
@@ -11,6 +11,7 @@
   height: 18px;
   min-width: 18px;
   min-height: 18px;
+  align-self: center;
   background-color: var(--red-1) !important;
   -webkit-mask: url(/images/teitetsu.svg) no-repeat center / contain;
   mask: url(/images/teitetsu.svg) no-repeat center / contain;
